--- a/views/index.ejs
+++ b/views/index.ejs
@@ -55,28 +55,28 @@
                     </div>
                     <div class="panel-princ col-md-4">
                        <div class="login">
-                           <form role="form-signin" id="formLogin">
+                           <<form role="form-signin" id="formLogin" action="/login" method="post">
                                <h2 class="form-signin-heading">Ingresar</h2>
                                <div class="form-group">
-                                   <label for="usr">Usuario:</label>
-                                   <input type="text" class="form-control" id="usr">
+                                  <label for="correo">Correo:</label>
+                                  <input type="email" id="correo" name="correo" class="form-control" placeholder="Ingrese su correo" />
                                </div>
                                <div class="form-group">
-                                   <label for="pwd">Contraseña:</label>
-                                   <input type="password" class="form-control" id="pwd">
+                                   <label for="clave" >clave:</label>
+                                   <input type="password" name="clave" class="form-control" id="clave">
                                </div>
 
                                 <div class="form-group">
                                   <select class="form-control" id="selectRol" name="selectRol">
-                                    <option value="Usuario">Usuario</option>
+                                    <option value="Paciente">Paciente</option>
                                     <option value="Operario">Operario</option>
-                                    <option value="laboratorista">Laboratorista</option>
+                                    <option value="Laboratorista">Laboratorista</option>
                                   </select>
                                 </div>
 
                                <button type="submit" class="btn btn-primary btn-block" id="aceptar">Aceptar</button>
  
-                           </form>       
+                           </form>      
                        </div>
                         
                     </div>
@@ -84,43 +84,6 @@
                 </div>
             </div>
         </div>
-
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
-        <script type="text/javascript" src="https://cdn.datatables.net/v/bs/dt-1.10.12/datatables.min.js"></script>
-        <script>
-
-          $(document).ready(function() {
-            console.log("1");
-              $("#formLogin").submit(function(event){
-                console.log("2");
-
-                  var formData= $("#formLogin").serialize();
-                  console.log(formData);
-
-                  if (formData.selectRol=="Usuario") {
-                    $.ajax({
-                        type: "POST",
-                        url: "/paciente/?flag=login",
-                        data: formData,
-                        success:function(data){
-                            console.log(data);
-                            
-                        }
-                    });
-                    return false;
-
-                  } else if (tipo_usuario=="Operario") {
-
-                  } else {
-
-                  }
-                  return false;
-              });
-
-          });
-
-        </script>
         
         <footer class="footer">
            <div class="container-fluid">
