--- a/public/views/operario.html
+++ b/public/views/operario.html
@@ -23,7 +23,7 @@
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <!-- Latest compiled and minified JavaScript -->
     <!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>-->
-    <script type="text/javascript" src="../public/scripts/operario.js"></script>
+    <script type="text/javascript" src="../scripts/operario.js"></script>
 
 </head>
 
