Se esta validando quien puede usar los metodos del API REST

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -71,6 +71,7 @@
                                     <option value="Paciente">Paciente</option>
                                     <option value="Operario">Operario</option>
                                     <option value="Laboratorista">Laboratorista</option>
+                                    <option value="Admin">Admin</option>
                                   </select>
                                 </div>
 
