se modificaron las llamadas de las paginas

--- a/public/styles/styles2.css
+++ b/public/styles/styles2.css
@@ -2,7 +2,7 @@
 @import url('http://fonts.googleapis.com/css?family=Montserrat:400,700');
 
 body {
-    background: url("../images/fondo.jpg") no-repeat;
+    background: url("../imagenes/fondo.jpg") no-repeat;
     font-family: 'Montserrat', sans-serif;
 }
 
