--- a/views/laboratorista.ejs
+++ b/views/laboratorista.ejs
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs/dt-1.10.12/datatables.min.css"/>
-    <link rel="stylesheet" href="../styles/styles2.css">
+    <link rel="stylesheet" href="../public/styles/styles2.css">
   </head>
 
   <body>
@@ -41,7 +41,7 @@
 
 
     <div class="container usuarios">
-      <h2>Laboratorista</h2>
+      <h2>Laboratorista <%= nombre %> <%= apellido %>    </h2>
       <table id="tablaUsuarios" class="table table-bordered table-striped">
         <thead>
           <tr>
