--- a/views/laboratorista.ejs
+++ b/views/laboratorista.ejs
@@ -24,7 +24,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Administrador de examenes</a>
+          <a class="navbar-brand" href="#">Laboratorista <%= nombre %> <%= apellido %></a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
@@ -41,7 +41,7 @@
 
 
     <div class="container usuarios">
-      <h2>Laboratorista <%= nombre %> <%= apellido %>    </h2>
+      <h2> Muestras </h2>
       <table id="tablaUsuarios" class="table table-bordered table-striped">
         <thead>
           <tr>
